<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/action_my_shops"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_support"
        android:orderInCategory="100"
        android:title="@string/action_support"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_place"
        android:orderInCategory="100"
        android:title="@string/action_change_city"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_legal"
        android:orderInCategory="100"
        android:title="@string/legal"
        app:showAsAction="never" />
</menu>
