<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorities"
        android:icon="@drawable/ic_follow"
        android:title="@string/my_favorites_shops_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_offers"
        android:icon="@drawable/ic_offer"
        android:title="@string/activities_menus"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_draws"
        android:icon="@drawable/ic_present"
        android:title="@string/draw_title_tool"
        app:showAsAction="ifRoom" />
    <!--<item-->
        <!--android:id="@+id/action_empty"-->
        <!--android:title="" />-->
</menu>
